--- a/조승현/hackathon2-frontend/live.html
+++ b/조승현/hackathon2-frontend/live.html
@@ -6,43 +6,84 @@
   <title>Page Title</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <style>
-    li {
-      /* text-align: center; */
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    ul {
+      display: inline-block;
+      width: 900px !important;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 40px;
     }
     input {
-      width: 800px;
+      display: inline-block;
+      width: 800px !important;
+      height: 50px;
+      font-size: 40px !important;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: unset !important;
+      color: white !important;
+      font-weight: bold !important;
+      border: 0 !important;
+      border-top: 4px solid blue !important;
+      border-bottom: 4px solid black !important;
+    }
+    .body{
+      width: 1920px;
+      height: 1080px;
+      padding-top: 40px;
+      box-sizing: border-box;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: rgb(0, 0, 175);
+    }
+    .livechat {
+      display: inline-block;
+      width: 920px;
+      height: 45px;
+      margin-bottom: 2px;
+      border-bottom: 2px solid white;
+    }
+    li {
+      color: powderblue !important;
+      font-weight: bold !important;
+      font-size: 30px !important;
     }
   </style>
 </head>
 <body>
-  <div class="col-auto">
-    <input type="text" class="form-control content">
+  <div class="body">
+    <div class="col-auto">
+      <input type="text" placeholder="실시간 채팅 글 작성 ( 공백 안댐 )" class="form-control content">
+    </div>
+    <div class="chat">
+    <ul class="list-group">
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+      <li class="livechat">&nbsp</li>
+    </ul>
+    </div>
   </div>
-  <div class="chat">
-  <ul class="list-group">
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-    <li class="list-group-item list-group-item-dark livechat">&nbsp</li>
-  </ul>
-</div>
-
 
 
 
@@ -53,11 +94,11 @@
   <script>
     let all = location.href.split("?")[1];
     let name = all.split("=")[1].split(",")[0]
-    let color = all.split("=")[1].split(",")[1]
+    let  = all.split("=")[1].split(",")[1]
     let last = -1;
     $(".content").on("keydown", (e) =>{
       if(e.keyCode == 13 && $(".content").val() != "" && $(".content").val() != " "){
-        fetch(`http://192.168.0.7:8080/add?content=${$(".content").val()}&user=${name},${color}`, {
+        fetch(`http://192.168.0.7:8080/add?content=${$(".content").val()}&user=${name},${etc}`, {
         method: "GET"
       }).then(() => {
         $(".content").val("");
