--- a/조승현/hackathon2-frontend/admin-info.html
+++ b/조승현/hackathon2-frontend/admin-info.html
@@ -7,8 +7,13 @@
 </head>
 <body>
   <div class="background">
+    <div class="command">
+      <span>위(↑)<br><br>아래 (↓)<br><br>이전 페이지(→)<br><br>다음 페이지(→)<br><br>계정 삭제(Del)<br><br>계정 경고(Ctrl + U)</span>
+    </div>
     <div class="left-bar">
-      <span>사용자 목록</span>
+      <div class="left-bar-title">
+        <span>사용자 목록</span>
+      </div>
       <div class="users-info">
         <ul>
           <li class="checked"></li>
