--- a/조승현/hackathon2-frontend/sign-in.html
+++ b/조승현/hackathon2-frontend/sign-in.html
@@ -296,6 +296,10 @@ body {
 
   </script>
   <script>
+    var pattern1 = /[0-9]/; //숫자
+    var pattern2 = /[a-zA-Z]/; //영어
+    var pattern3 = /[ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/; //한글
+    var pattern4 = /[~!@#\#$%<>^&*]/; //특수문자
     let name;
     let id;
     let password;
