--- a/조승현/hackathon2-frontend/sign-in.html
+++ b/조승현/hackathon2-frontend/sign-in.html
@@ -339,7 +339,7 @@ body {
       password = $(".sign-new-password").val();
       etc = $(".sign-new-etc").val();
       
-      if(namechecked && idchecked && name.length > 0 && id.length > 0 && password.length > 7 && etc.length >= 0 && id.length < 10 && name.length < 10){
+      if(namechecked && idchecked && password.length > 7 && etc.length >= 0){
         fetch("http://192.168.0.7:8080/insert", {
           method: "POST",
           headers: {
@@ -393,7 +393,22 @@ body {
     })
     $(".sign-new-checkname").click(() => {
       name = $(".sign-new-name").val();
-      if(name.length > 0 && name.length < 10) {
+      let strint = 0;
+      for(let i = 0; i < name.length; i++){
+        if(pattern1.test(name[i])){
+          strint += 1;
+        }else if(pattern2.test(name[i])){
+          strint += 1;
+        }else if(pattern3.test(name[i])){
+          strint += 2;
+        }else if(pattern4.test(name[i])){
+          strint += 2;
+        }else {
+          strint += 2;
+        }
+      }
+      console.log(strint)
+      if(strint > 0 && strint < 17) {
         fetch("http://192.168.0.7:8080/checkname", {
           method: "POST",
           headers: {
