--- a/윤종광/hackathon2-frontend/guestboard/guestboard.html
+++ b/윤종광/hackathon2-frontend/guestboard/guestboard.html
@@ -64,11 +64,11 @@
         </div>
         <hr>
         <div id="content-div">
-          <textarea id="write-content"></textarea>
+          <textarea id="writeArea"></textarea>
         </div>
         <div id="writeInfo">
-          <span id="charCount">140</span>
-          <span id="write-btn" class="clickable clickable-green">[남기기]</span>
+          <span id="charCount"></span>
+          <span id="writeBtn" class="clickable clickable-green">[남기기]</span>
         </div>
       </div>
     </div>
