--- a/윤종광/hackathon2-frontend/guestboard/guestboard.html
+++ b/윤종광/hackathon2-frontend/guestboard/guestboard.html
@@ -38,19 +38,6 @@
     </header>
     
     <ul id="guestbook-ul">
-      <li>
-        <div>
-          <span id="name"></span>
-          <span id="id"></span>
-          <span id="elapsedTime"></span>
-          <span id="like"></span>
-        </div>
-        <div>
-          <span id="content"></span>
-          <span id="delete-btn"></span>
-          <span id="update-btn"></span>
-        </div>
-      </li>
     </ul>
     </div>
     
@@ -72,9 +59,13 @@
         </div>
       </div>
     </div>
-    <script src="js/guestboard.js"></script>
-    <script src="js/guestboardFetch.js">
 
-    </script>
+
+
+
+
+    <script src="js/guestboard.js"></script>
+    <script src="js/guestboardFetch.js"></script>
+
 </body>
 </html>
