--- a/조준호/hackathon2-frontend/qna/form.html
+++ b/조준호/hackathon2-frontend/qna/form.html
@@ -47,7 +47,7 @@ document.querySelector('#add-btn').onclick = (e) => {
     headers: {
       'Content-type': 'application/x-www-form-urlencoded'
     },
-    body: `id=${id}&title=${title}&content=${content}&password=${qpassword}`
+    body: `id=${id}&title=${title}&content=${content}&qpassword=${qpassword}`
   })
   .then((response) => {return response.json();})
   .then((obj) => {
