--- a/조준호/hackathon2-frontend/qna/list.html
+++ b/조준호/hackathon2-frontend/qna/list.html
@@ -7,8 +7,8 @@
   <title>QnA</title>
 </head>
 <body>
-<h1>질문목록</h1>
-<a href="form.html">질문등록</a>
+<h1>QnA</h1>
+<a href="form.html">질문하기</a>
 <table border="1">
   <thead>
     <tr>
@@ -44,7 +44,7 @@ fetch('http://localhost:8080/qnas')
   .catch((err) => {
     alert("서버 요청 오류!");
     console.log(err);
-  });  
+  });
 </script>
 </body>
 </html>
