--- a/신지윤/hackathon2-frontend/list.html
+++ b/신지윤/hackathon2-frontend/list.html
@@ -39,6 +39,30 @@
           <th>작성일</th>
           <th>조회수</th>
         </tr>
+        <tr>
+          <td> 1</td>
+          <td><img src="https://i.ytimg.com/vi/chI0nkP07-M/maxresdefault.jpg" width = "150"></td>
+          <td><a href="https://www.youtube.com/watch?v=chI0nkP07-M">[모아보기] 웬만한 악과 깡으로는 살아남기 힘들었던 90년대 레전드 영상｜크랩</a></td>
+          <td>admin1</td>
+          <td>2023-01-15</td>
+          <td>7</td>
+        </tr>
+        <tr>
+          <td> 2</td>
+          <td><img src="https://i.ytimg.com/vi/bMSSOzE0Q2A/maxresdefault.jpg" width = "150"></td>
+          <td><a href="https://www.youtube.com/watch?v=bMSSOzE0Q2A">서울-대전 10시간;; 고속도로에서 밥 지어 먹던 90년대 귀성길 클라스 대방출 l 꿀잼 보장</a></td>
+          <td>admin1</td>
+          <td>2023-01-15</td>
+          <td>4</td>
+        </tr>
+        <tr>
+          <td> 3</td>
+          <td><img src="https://i.ytimg.com/vi/bv6euol2IYk/maxresdefault.jpg" width = "150"></td>
+          <td><a href="https://www.youtube.com/watch?v=bv6euol2IYk">개마저 떡실신시킨 80년대 여름</a></td>
+          <td>admin1</td>
+          <td>2023-01-16</td>
+          <td>3</td>
+        </tr>
       </thead>
       <tbody>
       </tbody>
@@ -56,7 +80,7 @@
       for (var y of obj.data) {
         html += `<tr>
           <th>${y.no}</th>
-          <th><img src="${y.thumbnail}" width = "100"></th>
+          <th><img src="${y.thumbnail}" width = "150"></th>
           <th><a href="${y.link}">${y.title} </a></th>
           <th><a href="view.html?no=${y.no}">${y.id}</th>
           <th>${y.createdDate}</th>
