--- a/조준호/hackathon2-frontend/qna/answer.html
+++ b/조준호/hackathon2-frontend/qna/answer.html
@@ -6,15 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>게시글 수정</title>
-  <style>
-    table {
-      width: 600px;
-    }
-    td {
-      padding: 10px;
-      border: 1px solid #666666;
-    }
-  </style>
 </head>
 <body>
   <div id="menu">
@@ -43,22 +34,23 @@
           </tr>
           <tr>
             <th>내용</th>
-            <td><textarea name="content" id="f-content" style="width:90%; height:200px; font-size:20px;"></textarea></td>
+            <td><textarea name="content" rows="10" cols="50" id="f-content" style="width:90%; height:70%; font-size:20px;"></textarea></td>
           </tr>
           <tr>
             <th>작성일</th>
-            <td><span id="f-createddate"></span></td>
+            <td><span id="f-createddate" ></span></td>
           </tr>
           <tr>
             <th>조회수</th>
             <td><span id="f-viewcount"></span></td>
           </tr>
+          <tr>
+            <th>답변</th>
+            <td><textarea name="content" id="f-content" style="width:90%; height:80%; font-size:20px;"></textarea></td>
+          </tr>
         </tbody>
       </table>
-      <button id="update-btn" type="button">변경</button>
-      <button id="delete-btn" type="button">삭제</button>
-      <button id="list-btn" type="button">목록</button>
-      <button id="answer-btn" type="button">답변하기</button>
+      <button id="regist-btn" type="button">답변등록</button>
       </form>
     </div>
 
@@ -67,44 +59,44 @@
 // location.href --> http://localhost:5500/bitcamp-ncp-teacher/frontend-app/app/board/view.html?no=20
 // values[0] --> "http://localhost:5500/bitcamp-ncp-teacher/frontend-app/app/board/view.html"
 // values[1] --> "no=20"
-var values = location.href.split('?');
-if (values.length != 2) {
-  alert("옳바른 페이지 주소가 아닙니다.");
-  throw "no 파라미터 값이 누락되었습니다.";
-}
-// values[1] --> "no=20"
-// values2[0] --> "no"
-// values2[1] --> "20"
-var values2 = values[1].split("=");
-if (values2.length != 2 || values2[0] != "no") {
-  alert("옳바른 페이지 주소가 아닙니다.");
-  throw "no 파라미터 값이 누락되었습니다.";
-}
+// var values = location.href.split('?');
+// if (values.length != 2) {
+//   alert("옳바른 페이지 주소가 아닙니다.");
+//   throw "no 파라미터 값이 누락되었습니다.";
+// }
+// // values[1] --> "no=20"
+// // values2[0] --> "no"
+// // values2[1] --> "20"
+// var values2 = values[1].split("=");
+// if (values2.length != 2 || values2[0] != "no") {
+//   alert("옳바른 페이지 주소가 아닙니다.");
+//   throw "no 파라미터 값이 누락되었습니다.";
+// }
 
-var no = parseInt(values2[1]);
-if (isNaN(no)) {
-  alert("게시글 번호가 옳지 않습니다.");
-  throw "no 파라미터 값이 숫자가 아닙니다.";
-}
+// var no = parseInt(values2[1]);
+// if (isNaN(no)) {
+//   alert("게시글 번호가 옳지 않습니다.");
+//   throw "no 파라미터 값이 숫자가 아닙니다.";
+// }
 
-fetch(`http://localhost:8080/qnas/${no}`)
-  .then((response) => response.json())
-  .then((obj) => {
-    if (obj.status == "failure") {
-      alert("서버 요청 오류!");
-      console.log(obj.data);
-      return;
-    }
-    document.querySelector("#f-no").value = obj.data.no;
-    document.querySelector("#f-title").value = obj.data.title;
-    document.querySelector("#f-content").value = obj.data.content;
-    document.querySelector("#f-createddate").innerHTML = obj.data.createdDate;
-    document.querySelector("#f-viewcount").innerHTML = obj.data.viewCount;
-  })
-  .catch((err) => {
-    alert("서버 요청 오류!");
-    console.log(err)
-  });
+// fetch(`http://localhost:8080/qnas/${no}`)
+//   .then((response) => response.json())
+//   .then((obj) => {
+//     if (obj.status == "failure") {
+//       alert("서버 요청 오류!");
+//       console.log(obj.data);
+//       return;
+//     }
+//     document.querySelector("#f-no").value = obj.data.no;
+//     document.querySelector("#f-title").value = obj.data.title;
+//     document.querySelector("#f-content").value = obj.data.content;
+//     document.querySelector("#f-createddate").innerHTML = obj.data.createdDate;
+//     document.querySelector("#f-viewcount").innerHTML = obj.data.viewCount;
+//   })
+//   .catch((err) => {
+//     alert("서버 요청 오류!");
+//     console.log(err)
+//   });
 
 document.querySelector('#update-btn').onclick = (e) => {
   var title = encodeURIComponent(document.querySelector('#f-title').value);
@@ -164,29 +156,8 @@ document.querySelector('#delete-btn').onclick = (e) => {
 document.querySelector('#list-btn').onclick = (e) => {
   location.href = "list.html";
 };
-
 document.querySelector('#answer-btn').onclick = (e) => {
-  var qpassword = prompt('암호를 입력하세요!');
-
-fetch(`http://localhost:8080/qnas/${no}`, {
-  method: 'DELETE',
-  headers: {
-    'Content-type': 'application/x-www-form-urlencoded'
-  },
-  body: `qpassword=${qpassword}`
-})
-.then((response) => response.json())
-.then((obj) => {
-  if (obj.status == "failure") {
-    alert("게시글 삭제 오류!\n" + obj.data);
-    return;
-  }
   location.href = "answer.html";
-})
-.catch((err) => {
-  alert("서버 요청 오류!");
-  console.log(err);
-});
 };
 </script>
 </body>
