--- a/조승현/hackathon2-frontend/you/form.html
+++ b/조승현/hackathon2-frontend/you/form.html
@@ -70,7 +70,7 @@
     var link = document.querySelector('#f-link').value;
   
     // console.log(`title=${title}&content=${content}&password=${password}`);
-    fetch('http://localhost:8080/youtubes', {
+    fetch('http://192.168.0.7:8080/youtubes', {
       method: 'POST',
       headers: {
         'Content-type': 'application/x-www-form-urlencoded'
