--- a/조승현/hackathon2-frontend/you/view.html
+++ b/조승현/hackathon2-frontend/you/view.html
@@ -13,7 +13,7 @@
     <ul>
       <li class="go-1">라이브채팅</li>
       <li class="go-2">방명록</li>
-      <li class="go-5">뉴스</li>
+      <li class="go-5">Qna</li>
       <li class="go-6">이것 저것 공유</li>
     </div>
   
