--- a/조승현/hackathon2-frontend/app/list.html
+++ b/조승현/hackathon2-frontend/app/list.html
@@ -13,7 +13,7 @@
     <a id="head-nav-home" class="go-0">홈</a>
     <a id="aa" class="go-2">방명록</a>
     <a id="aa" class="go-4">그때 그 시절..☆</a>
-    <a id="aa" class="go-5">뉴스</a>
+    <a id="aa" class="go-5">Qna</a>
   </nav>
   <div class="blanktop"></div>
   <div class="container">
@@ -46,7 +46,7 @@
             <td>2023-01-16</td>
             <td>관리자</td>
             <td><a class="hell">헬스 꿀팁 총정리</a></td>
-            <td>조회수</td>
+            <td>351</td>
           </tr>
         </thead>
         <tbody>
@@ -61,7 +61,7 @@ let name = all.split("=")[1].split(",")[0]
 let id  = all.split("=")[1].split(",")[1]
 var tbody = document.querySelector("tbody");
 
-fetch('http://localhost:8080/boards')
+fetch('http://192.168.0.7:8080/boards')
   .then((response) => {return response.json();})
   .then((obj) => {
     console.log(134)
@@ -72,7 +72,7 @@ fetch('http://localhost:8080/boards')
         <td>${b.createdDate}</td>
         <td>${b.name}</td>
         <td><a href="view.html?no=${b.no}&${all}">${b.title}</a></td>
-        <td>${b.viewCount}</td>
+        <td>${3}</td>
         </tr>\n`;
     }
     tbody.innerHTML = html;
