--- a/조승현/hackathon2-frontend/app/view.html
+++ b/조승현/hackathon2-frontend/app/view.html
@@ -84,7 +84,7 @@ let all = location.href.split('?')[1].split("&")[1];
 let name = all.split("=")[1].split(",")[0]
 let id  = all.split("=")[1].split(",")[1]
 
-fetch(`http://localhost:8080/boards/${no}`)
+fetch(`http://192.168.0.7:8080/boards/${no}`)
   .then((response) => response.json())
   .then((obj) => {
     if (obj.status == "failure") {
@@ -108,7 +108,7 @@ document.querySelector('#update-btn').onclick = (e) => {
   var content = encodeURIComponent(document.querySelector('#f-content').value);
   var password = document.querySelector('#f-password').value;
 
-  fetch(`http://localhost:8080/boards/${no}`, {
+  fetch(`http://192.168.0.7:8080/boards/${no}`, {
     method: 'PUT',
     headers: {
       'Content-type': 'application/x-www-form-urlencoded'
@@ -135,7 +135,7 @@ document.querySelector('#update-btn').onclick = (e) => {
 document.querySelector('#delete-btn').onclick = (e) => {
   var password = prompt('암호를 입력하세요!');
 
-  fetch(`http://localhost:8080/boards/${no}`, {
+  fetch(`http://192.168.0.7:8080/boards/${no}`, {
     method: 'DELETE',
     headers: {
       'Content-type': 'application/x-www-form-urlencoded'
