--- a/조승현/hackathon2-frontend/qna/answer.html
+++ b/조승현/hackathon2-frontend/qna/answer.html
@@ -57,8 +57,8 @@
 let all = location.href.split("?")[1];
     let name = all.split("=")[1].split(",")[0]
     let id = all.split("=")[1].split(",")[1]
-// location.href --> http://localhost:5500/bitcamp-ncp-teacher/frontend-app/app/board/view.html?no=20
-// values[0] --> "http://localhost:5500/bitcamp-ncp-teacher/frontend-app/app/board/view.html"
+// location.href --> http://192.168.0.7:5500/bitcamp-ncp-teacher/frontend-app/app/board/view.html?no=20
+// values[0] --> "http://192.168.0.7:5500/bitcamp-ncp-teacher/frontend-app/app/board/view.html"
 // values[1] --> "no=20"
 // var values = location.href.split('?');
 // if (values.length != 2) {
@@ -80,7 +80,7 @@ let all = location.href.split("?")[1];
 //   throw "no 파라미터 값이 숫자가 아닙니다.";
 // }
 
-// fetch(`http://localhost:8080/qnas/${no}`)
+// fetch(`http://192.168.0.7:8080/qnas/${no}`)
 //   .then((response) => response.json())
 //   .then((obj) => {
 //     if (obj.status == "failure") {
@@ -105,7 +105,7 @@ document.querySelector('#update-btn').onclick = (e) => {
   
   var qpassword = prompt('암호를 입력하세요!');
 
-  fetch(`http://localhost:8080/qnas/${no}`, {
+  fetch(`http://192.168.0.7:8080/qnas/${no}`, {
     method: 'PUT',
     headers: {
       'Content-type': 'application/x-www-form-urlencoded'
@@ -132,7 +132,7 @@ document.querySelector('#update-btn').onclick = (e) => {
 document.querySelector('#delete-btn').onclick = (e) => {
   var qpassword = prompt('암호를 입력하세요!');
 
-  fetch(`http://localhost:8080/qnas/${no}`, {
+  fetch(`http://192.168.0.7:8080/qnas/${no}`, {
     method: 'DELETE',
     headers: {
       'Content-type': 'application/x-www-form-urlencoded'
