--- a/조승현/hackathon2-frontend/qna/form.html
+++ b/조승현/hackathon2-frontend/qna/form.html
@@ -68,7 +68,7 @@ document.querySelector('#add-btn').onclick = (e) => {
   
 
   // console.log(`title=${title}&content=${content}&password=${password}`);
-  fetch('http://localhost:8080/qnas', {
+  fetch('http://192.168.0.7:8080/qnas', {
     method: 'POST',
     headers: {
       'Content-type': 'application/x-www-form-urlencoded'
